--- a/_posts/python/treemap/2015-06-30-treemap.html
+++ b/_posts/python/treemap/2015-06-30-treemap.html
@@ -1,5 +1,5 @@
 ---
-permalink: python/treemaps
+permalink: python/treemaps/
 description: How to make interactive treemap in Python with Plotly and Squarify. An examples of a treemap in Plotly using Squarify.
 title: Python Treemaps | plotly
 has_thumbnail: true
@@ -7,10 +7,10 @@ thumbnail: thumbnail/treemap.jpg
 layout: user-guide
 name: Treemaps
 language: python
-display_as: chart_type
+display_as: statistical
 has_thumbnail: true
 page_type: example_index
-order: 28
+order: 8
 ---
 {% raw %}
 <div class="cell border-box-sizing text_cell rendered">
@@ -110,16 +110,16 @@ Then define your treemap values. The sum of the treemap values must equal the to
 <span class="n">counter</span> <span class="o">=</span> <span class="mi">0</span>
 
 <span class="k">for</span> <span class="n">r</span> <span class="ow">in</span> <span class="n">rects</span><span class="p">:</span>
-    <span class="n">shapes</span><span class="o">.</span><span class="n">append</span><span class="p">(</span> 
+    <span class="n">shapes</span><span class="o">.</span><span class="n">append</span><span class="p">(</span>
         <span class="nb">dict</span><span class="p">(</span>
-            <span class="nb">type</span> <span class="o">=</span> <span class="s">&#39;rect&#39;</span><span class="p">,</span> 
-            <span class="n">x0</span> <span class="o">=</span> <span class="n">r</span><span class="p">[</span><span class="s">&#39;x&#39;</span><span class="p">],</span> 
-            <span class="n">y0</span> <span class="o">=</span> <span class="n">r</span><span class="p">[</span><span class="s">&#39;y&#39;</span><span class="p">],</span> 
-            <span class="n">x1</span> <span class="o">=</span> <span class="n">r</span><span class="p">[</span><span class="s">&#39;x&#39;</span><span class="p">]</span><span class="o">+</span><span class="n">r</span><span class="p">[</span><span class="s">&#39;dx&#39;</span><span class="p">],</span> 
+            <span class="nb">type</span> <span class="o">=</span> <span class="s">&#39;rect&#39;</span><span class="p">,</span>
+            <span class="n">x0</span> <span class="o">=</span> <span class="n">r</span><span class="p">[</span><span class="s">&#39;x&#39;</span><span class="p">],</span>
+            <span class="n">y0</span> <span class="o">=</span> <span class="n">r</span><span class="p">[</span><span class="s">&#39;y&#39;</span><span class="p">],</span>
+            <span class="n">x1</span> <span class="o">=</span> <span class="n">r</span><span class="p">[</span><span class="s">&#39;x&#39;</span><span class="p">]</span><span class="o">+</span><span class="n">r</span><span class="p">[</span><span class="s">&#39;dx&#39;</span><span class="p">],</span>
             <span class="n">y1</span> <span class="o">=</span> <span class="n">r</span><span class="p">[</span><span class="s">&#39;y&#39;</span><span class="p">]</span><span class="o">+</span><span class="n">r</span><span class="p">[</span><span class="s">&#39;dy&#39;</span><span class="p">],</span>
             <span class="n">line</span> <span class="o">=</span> <span class="nb">dict</span><span class="p">(</span> <span class="n">width</span> <span class="o">=</span> <span class="mi">2</span> <span class="p">),</span>
             <span class="n">fillcolor</span> <span class="o">=</span> <span class="n">color_brewer</span><span class="p">[</span><span class="n">counter</span><span class="p">]</span>
-        <span class="p">)</span> 
+        <span class="p">)</span>
     <span class="p">)</span>
     <span class="n">annotations</span><span class="o">.</span><span class="n">append</span><span class="p">(</span>
         <span class="nb">dict</span><span class="p">(</span>
@@ -135,14 +135,14 @@ Then define your treemap values. The sum of the treemap values must equal the to
 
 <span class="c"># For hover text</span>
 <span class="n">trace0</span> <span class="o">=</span> <span class="n">go</span><span class="o">.</span><span class="n">Scatter</span><span class="p">(</span>
-    <span class="n">x</span> <span class="o">=</span> <span class="p">[</span> <span class="n">r</span><span class="p">[</span><span class="s">&#39;x&#39;</span><span class="p">]</span><span class="o">+</span><span class="p">(</span><span class="n">r</span><span class="p">[</span><span class="s">&#39;dx&#39;</span><span class="p">]</span><span class="o">/</span><span class="mi">2</span><span class="p">)</span> <span class="k">for</span> <span class="n">r</span> <span class="ow">in</span> <span class="n">rects</span> <span class="p">],</span> 
+    <span class="n">x</span> <span class="o">=</span> <span class="p">[</span> <span class="n">r</span><span class="p">[</span><span class="s">&#39;x&#39;</span><span class="p">]</span><span class="o">+</span><span class="p">(</span><span class="n">r</span><span class="p">[</span><span class="s">&#39;dx&#39;</span><span class="p">]</span><span class="o">/</span><span class="mi">2</span><span class="p">)</span> <span class="k">for</span> <span class="n">r</span> <span class="ow">in</span> <span class="n">rects</span> <span class="p">],</span>
     <span class="n">y</span> <span class="o">=</span> <span class="p">[</span> <span class="n">r</span><span class="p">[</span><span class="s">&#39;y&#39;</span><span class="p">]</span><span class="o">+</span><span class="p">(</span><span class="n">r</span><span class="p">[</span><span class="s">&#39;dy&#39;</span><span class="p">]</span><span class="o">/</span><span class="mi">2</span><span class="p">)</span> <span class="k">for</span> <span class="n">r</span> <span class="ow">in</span> <span class="n">rects</span> <span class="p">],</span>
-    <span class="n">text</span> <span class="o">=</span> <span class="p">[</span> <span class="nb">str</span><span class="p">(</span><span class="n">v</span><span class="p">)</span> <span class="k">for</span> <span class="n">v</span> <span class="ow">in</span> <span class="n">values</span> <span class="p">],</span> 
+    <span class="n">text</span> <span class="o">=</span> <span class="p">[</span> <span class="nb">str</span><span class="p">(</span><span class="n">v</span><span class="p">)</span> <span class="k">for</span> <span class="n">v</span> <span class="ow">in</span> <span class="n">values</span> <span class="p">],</span>
     <span class="n">mode</span> <span class="o">=</span> <span class="s">&#39;text&#39;</span><span class="p">,</span>
 <span class="p">)</span>
-        
+
 <span class="n">layout</span> <span class="o">=</span> <span class="nb">dict</span><span class="p">(</span>
-    <span class="n">height</span><span class="o">=</span><span class="mi">700</span><span class="p">,</span> 
+    <span class="n">height</span><span class="o">=</span><span class="mi">700</span><span class="p">,</span>
     <span class="n">width</span><span class="o">=</span><span class="mi">700</span><span class="p">,</span>
     <span class="n">xaxis</span><span class="o">=</span><span class="nb">dict</span><span class="p">(</span><span class="n">showgrid</span><span class="o">=</span><span class="bp">False</span><span class="p">,</span><span class="n">zeroline</span><span class="o">=</span><span class="bp">False</span><span class="p">),</span>
     <span class="n">yaxis</span><span class="o">=</span><span class="nb">dict</span><span class="p">(</span><span class="n">showgrid</span><span class="o">=</span><span class="bp">False</span><span class="p">,</span><span class="n">zeroline</span><span class="o">=</span><span class="bp">False</span><span class="p">),</span>
