--- a/_posts/python/range-slider/2015-06-30-range-slider.html
+++ b/_posts/python/range-slider/2015-06-30-range-slider.html
@@ -1,5 +1,5 @@
 ---
-permalink: python/range-slider
+permalink: python/range-slider/
 description: Create graphs with range sliders and range selectors in Python with Plotly.
 title: Python Range Slider and Selectors | plotly
 has_thumbnail: true
@@ -10,7 +10,7 @@ language: python
 display_as: chart_type
 has_thumbnail: true
 page_type: example_index
-order: 4
+order: 9
 ---
 {% raw %}
 <div class="cell border-box-sizing text_cell rendered">
@@ -51,7 +51,7 @@ Find your api_key here: <a href="https://plot.ly/settings/api">https://plot.ly/s
     <div class="input_area">
 <div class=" highlight hl-ipython2"><pre><span class="kn">import</span> <span class="nn">plotly</span>
 <span class="kn">import</span> <span class="nn">plotly.plotly</span> <span class="kn">as</span> <span class="nn">py</span>
-<span class="kn">import</span> <span class="nn">plotly.graph_objs</span> <span class="kn">as</span> <span class="nn">go</span> 
+<span class="kn">import</span> <span class="nn">plotly.graph_objs</span> <span class="kn">as</span> <span class="nn">go</span>
 
 <span class="n">plotly</span><span class="o">.</span><span class="n">__version__</span>
 </pre></div>
