--- a/_posts/python/WebGL/2015-06-30-webgl.html
+++ b/_posts/python/WebGL/2015-06-30-webgl.html
@@ -1,5 +1,5 @@
 ---
-permalink: python/webgl-vs-svg
+permalink: python/webgl-vs-svg/
 description: Using WebGL with Scattergl() in Python with Plotly. Examples comparing WebGL scatter charts to SVG scatter charts in Python with Plotly.
 title: Python WebGL vs SVG | plotly
 has_thumbnail: true
@@ -10,7 +10,7 @@ language: python
 display_as: chart_type
 has_thumbnail: true
 page_type: example_index
-order: 3
+order: 1
 ---
 {% raw %}
 <div class="cell border-box-sizing text_cell rendered">
@@ -119,7 +119,7 @@ Find your api_key here: <a href="https://plot.ly/settings/api">https://plot.ly/s
     <span class="n">mode</span> <span class="o">=</span> <span class="s">&#39;markers&#39;</span><span class="p">,</span>
     <span class="n">marker</span> <span class="o">=</span> <span class="nb">dict</span><span class="p">(</span>
         <span class="n">line</span> <span class="o">=</span> <span class="nb">dict</span><span class="p">(</span>
-            <span class="n">width</span> <span class="o">=</span> <span class="mi">1</span><span class="p">,</span> 
+            <span class="n">width</span> <span class="o">=</span> <span class="mi">1</span><span class="p">,</span>
             <span class="n">color</span> <span class="o">=</span> <span class="s">&#39;#404040&#39;</span><span class="p">)</span>
     <span class="p">)</span>
 <span class="p">)</span>
