--- a/_posts/python/line_and_scatter/2015-06-30-scatter.html
+++ b/_posts/python/line_and_scatter/2015-06-30-scatter.html
@@ -1,5 +1,5 @@
 ---
-permalink: python/line-and-scatter
+permalink: python/line-and-scatter/
 description: How to make scatter plots in Python with Plotly.
 title: Python Scatter Plots | plotly
 has_thumbnail: true
@@ -10,7 +10,7 @@ language: python
 display_as: basic
 has_thumbnail: true
 page_type: example_index
-order: 1
+order: 2
 ---
 {% raw %}
 <div class="cell border-box-sizing text_cell rendered">
