order 3d and fit sections for python

--- a/_posts/python/polynomial-fit/2015-12-13-polynomial-fit-python_index.html
+++ b/_posts/python/polynomial-fit/2015-12-13-polynomial-fit-python_index.html
@@ -8,6 +8,7 @@ thumbnail: thumbnail/polynomial_fit.jpg
 language: python
 page_type: example_index
 has_thumbnail: true
+order: 3
 display_as: fitting_tools
 ---
 {% assign examples = site.posts | where:"language","python" | where:"suite","polynomial_fit" | sort: "order" %}
