--- a/_posts/python/3d-parametric/2015-08-21-parametric-index.html
+++ b/_posts/python/3d-parametric/2015-08-21-parametric-index.html
@@ -9,6 +9,7 @@ language: python
 page_type: example_index
 has_thumbnail: true
 display_as: 3d_charts
+order: 8
 ---
 {% assign examples = site.posts | where:"language","python" | where:"suite","3d-parametric" | sort: "order" %}
 {% include auto_examples.html examples=examples %}
