--- a/_posts/python/3d-wireframe/2015-08-21-wireframe-index.html
+++ b/_posts/python/3d-wireframe/2015-08-21-wireframe-index.html
@@ -9,6 +9,7 @@ language: python
 page_type: example_index
 has_thumbnail: true
 display_as: 3d_charts
+order: 9
 ---
 {% assign examples = site.posts | where:"language","python" | where:"suite","3d-wireframe" | sort: "order" %}
 {% include auto_examples.html examples=examples %}
