--- a/_posts/python/exponential-fit/2015-12-13-exponential-fit-python_index.html
+++ b/_posts/python/exponential-fit/2015-12-13-exponential-fit-python_index.html
@@ -9,6 +9,7 @@ language: python
 page_type: example_index
 has_thumbnail: true
 display_as: fitting_tools
+order: 2
 ---
 {% assign examples = site.posts | where:"language","python" | where:"suite","exponential_fit" | sort: "order" %}
 {% include auto_examples.html examples=examples %}
