updated thumbnail for streaming guide

--- a/_posts/user_guide_python/2015-06-30-python_streaming.html
+++ b/_posts/user_guide_python/2015-06-30-python_streaming.html
@@ -3,7 +3,7 @@ permalink: python/python-streaming/
 description: Getting Started with Plotly Streaming
 title: Getting Started with Plotly Streaming
 has_thumbnail: true
-thumbnail: 
+thumbnail: http://images.plot.ly/plotly-documentation/thumbnail/streaming-thumb-square.gif
 has_thumbnail: false
 layout: user-guide
 page_type: u-guide
