--- a/_posts/matlab/line_exclusive/2015-04-09-line_exclusive_matlab_index.html
+++ b/_posts/matlab/line_exclusive/2015-04-09-line_exclusive_matlab_index.html
@@ -1,6 +1,6 @@
 ---
 title: MATLAB Line Charts | Examples | Plotly
-name: plot | Line Charts
+name: Line Charts
 permalink: matlab/plot/
 description: How to make a plot in MATLAB. Examples of the plot function, line and marker types, custom colors, and log and semi-log axes.
 layout: base
@@ -9,7 +9,7 @@ language: matlab
 page_type: example_index
 has_thumbnail: true
 display_as: chart_type
-order: 0
+order: 1
 ---
 {% assign examples = site.posts | where:"language","matlab" | where:"suite","line_exclusive" | sort: "order" %}
 {% include auto_examples.html examples=examples %}
