--- a/_posts/user_guide_python/2015-06-30-python_streaming.html
+++ b/_posts/user_guide_python/2015-06-30-python_streaming.html
@@ -4,7 +4,7 @@ description: Getting Started with Plotly Streaming
 title: Getting Started with Plotly Streaming
 has_thumbnail: true
 thumbnail: http://images.plot.ly/plotly-documentation/thumbnail/streaming-thumb-square.gif
-has_thumbnail: false
+has_thumbnail: true
 layout: user-guide
 page_type: u-guide
 language: python
