updated all streaming examples

--- a/_posts/user_guide_python/2015-06-30-python_streaming.html
+++ b/_posts/user_guide_python/2015-06-30-python_streaming.html
@@ -16,15 +16,6 @@ title: Getting Started with Plotly Streaming
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h2 id="Getting-Started-with-Streaming">Getting Started with Streaming<a class="anchor-link" href="#Getting-Started-with-Streaming">&#182;</a></h2>
-</div>
-</div>
-</div>
-<div class="cell border-box-sizing text_cell rendered">
-<div class="prompt input_prompt">
-</div>
-<div class="inner_cell">
-<div class="text_cell_render border-box-sizing rendered_html">
 <p>Welcome to Plotly's Python API User Guide.</p>
 <blockquote><p>Links to the other sections can be found on the User Guide's <a href="https://plot.ly/python/user-guide#Table-of-Contents:">homepage</a>.</p>
 </blockquote>
@@ -59,13 +50,10 @@ title: Getting Started with Plotly Streaming
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[33]:</div>
+<div class="prompt input_prompt">In&nbsp;[7]:</div>
 <div class="inner_cell">
     <div class="input_area">
-<div class=" highlight hl-ipython2"><pre><span class="c"># (*) Import plotly package</span>
-<span class="kn">import</span> <span class="nn">plotly</span>
- 
-<span class="c"># Check plolty version (if not latest, please upgrade)</span>
+<div class=" highlight hl-ipython2"><pre><span class="kn">import</span> <span class="nn">plotly</span>
 <span class="n">plotly</span><span class="o">.</span><span class="n">__version__</span>
 </pre></div>
 
@@ -77,11 +65,11 @@ title: Getting Started with Plotly Streaming
 <div class="output">
 
 
-<div class="output_area"><div class="prompt output_prompt">Out[33]:</div>
+<div class="output_area"><div class="prompt output_prompt">Out[7]:</div>
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&apos;1.9.9&apos;</pre>
+<pre>&apos;1.9.10&apos;</pre>
 </div>
 
 </div>
@@ -102,19 +90,13 @@ title: Getting Started with Plotly Streaming
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[34]:</div>
+<div class="prompt input_prompt">In&nbsp;[8]:</div>
 <div class="inner_cell">
     <div class="input_area">
-<div class=" highlight hl-ipython2"><pre><span class="c"># (*) To communicate with Plotly&#39;s server</span>
+<div class=" highlight hl-ipython2"><pre><span class="kn">import</span> <span class="nn">numpy</span> <span class="kn">as</span> <span class="nn">np</span> 
 <span class="kn">import</span> <span class="nn">plotly.plotly</span> <span class="kn">as</span> <span class="nn">py</span>  
- 
-<span class="c"># (*) Useful Python/Plotly tools</span>
 <span class="kn">import</span> <span class="nn">plotly.tools</span> <span class="kn">as</span> <span class="nn">tls</span>   
- 
-<span class="c"># (*) Graph objects to piece together plots</span>
 <span class="kn">import</span> <span class="nn">plotly.graph_objs</span> <span class="kn">as</span> <span class="nn">go</span>
-
-<span class="kn">import</span> <span class="nn">numpy</span> <span class="kn">as</span> <span class="nn">np</span>  <span class="c"># (*) numpy for math functions and arrays</span>
 </pre></div>
 
 </div>
@@ -136,7 +118,7 @@ title: Getting Started with Plotly Streaming
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p>Before you start streaming, you're going to need some stream tokens. You will need one stream token for every <code>trace object</code> you wish to stream to. Thus if you have two lines that you want to be plotted and streamed to, you're going to require two unique stream tokens. Notice that more tokens can be added via the settings section of your Plotly profile: <a href="https://testop.plot.ly/settings/api">https://testop.plot.ly/settings/api</a></p>
+<p>Before you start streaming, you're going to need some <a href="https://plot.ly/settings/api">stream tokens</a>. You will need <strong>one unique stream token for every <code>trace object</code> </strong> you wish to stream to. Thus if you have two traces that you want to plot and stream, you're going to require two unique stream tokens. Notice that more tokens can be added via the settings section of your Plotly profile: <a href="https://plot.ly/settings/api">https://plot.ly/settings/api</a></p>
 
 </div>
 </div>
@@ -163,7 +145,7 @@ title: Getting Started with Plotly Streaming
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[35]:</div>
+<div class="prompt input_prompt">In&nbsp;[9]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython2"><pre><span class="n">stream_ids</span> <span class="o">=</span> <span class="n">tls</span><span class="o">.</span><span class="n">get_credentials_file</span><span class="p">()[</span><span class="s">&#39;stream_ids&#39;</span><span class="p">]</span>
@@ -180,7 +162,7 @@ title: Getting Started with Plotly Streaming
 
 <div class="output_area"><div class="prompt"></div>
 <div class="output_subarea output_stream output_stdout output_text">
-<pre>[u&apos;kobzsyl8h4&apos;]
+<pre>[u&apos;a3yx8ev3pg&apos;, u&apos;2w50b45d0z&apos;, u&apos;cew1sbgo4s&apos;, u&apos;nhlxf6ig3d&apos;, u&apos;n9s75hv9ic&apos;, u&apos;96kd717ava&apos;, u&apos;v6f5oeb8ut&apos;, u&apos;4lm5a0gsr8&apos;, u&apos;0xhh453c6m&apos;]
 </pre>
 </div>
 </div>
@@ -204,7 +186,7 @@ title: Getting Started with Plotly Streaming
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h4 id="Getting-Aquainted-with-Streaming-with-an-Example">Getting Aquainted with Streaming with an Example<a class="anchor-link" href="#Getting-Aquainted-with-Streaming-with-an-Example">&#182;</a></h4>
+<h4 id="An-Example-to-Get-You-Started">An Example to Get You Started<a class="anchor-link" href="#An-Example-to-Get-You-Started">&#182;</a></h4>
 </div>
 </div>
 </div>
@@ -239,14 +221,14 @@ There are two main objects that will be created and used for streaming:</p>
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p>The Stream Id Object comes bundled in the <code>graph_objs</code> package. We can then call help to see the description of this object:</p>
+<p>The <code>Stream Id Object</code> comes bundled in the <code>graph_objs</code> package. We can then call help to see the description of this object:</p>
 
 </div>
 </div>
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[36]:</div>
+<div class="prompt input_prompt">In&nbsp;[10]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython2"><pre><span class="n">help</span><span class="p">(</span><span class="n">go</span><span class="o">.</span><span class="n">Stream</span><span class="p">)</span>
@@ -519,14 +501,14 @@ We'll now create a single stream token for our streaming example, which will inc
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[37]:</div>
+<div class="prompt input_prompt">In&nbsp;[12]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython2"><pre><span class="c"># Get stream id from stream id list </span>
 <span class="n">stream_id</span> <span class="o">=</span> <span class="n">stream_ids</span><span class="p">[</span><span class="mi">0</span><span class="p">]</span>
 
 <span class="c"># Make instance of stream id object </span>
-<span class="n">stream_1</span> <span class="o">=</span> <span class="n">Stream</span><span class="p">(</span>
+<span class="n">stream_1</span> <span class="o">=</span> <span class="n">go</span><span class="o">.</span><span class="n">Stream</span><span class="p">(</span>
     <span class="n">token</span><span class="o">=</span><span class="n">stream_id</span><span class="p">,</span>  <span class="c"># link stream id to &#39;token&#39; key</span>
     <span class="n">maxpoints</span><span class="o">=</span><span class="mi">80</span>      <span class="c"># keep a max of 80 pts on screen</span>
 <span class="p">)</span>
@@ -543,14 +525,14 @@ We'll now create a single stream token for our streaming example, which will inc
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
 <p>The <code>'maxpoints'</code> key sets the maxiumum number of points to keep on the plotting surface at any given time.
-More over, if you want to avoid the use of these Stream Id Objects, you can just create a dictionary with at least the token parameter defined, for example:</p>
+More over, if you want to avoid the use of these <code>Stream Id Objects</code>, you can just create a dictionary with at least the token parameter defined, for example:</p>
 
 </div>
 </div>
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[38]:</div>
+<div class="prompt input_prompt">In&nbsp;[13]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython2"><pre><span class="n">stream_1</span> <span class="o">=</span> <span class="nb">dict</span><span class="p">(</span><span class="n">token</span><span class="o">=</span><span class="n">stream_id</span><span class="p">,</span> <span class="n">maxpoints</span><span class="o">=</span><span class="mi">60</span><span class="p">)</span>
@@ -566,25 +548,25 @@ More over, if you want to avoid the use of these Stream Id Objects, you can just
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p>Now that we have our stream id object ready to go, we can set up our plot. And we do this in the same way that we would any ohter plot plot, the only thing is that we now have to set the stream parameter in our trace object.</p>
+<p>Now that we have our <code>Stream Id Object</code> ready to go, we can set up our plot. We do this in the same way that we would any other plot, the only thing is that we now have to set the stream parameter in our trace object.</p>
 
 </div>
 </div>
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[39]:</div>
+<div class="prompt input_prompt">In&nbsp;[15]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython2"><pre><span class="c"># Initialize trace of streaming plot by embedding the unique stream_id</span>
-<span class="n">trace1</span> <span class="o">=</span> <span class="n">Scatter</span><span class="p">(</span>
+<span class="n">trace1</span> <span class="o">=</span> <span class="n">go</span><span class="o">.</span><span class="n">Scatter</span><span class="p">(</span>
     <span class="n">x</span><span class="o">=</span><span class="p">[],</span>
     <span class="n">y</span><span class="o">=</span><span class="p">[],</span>
     <span class="n">mode</span><span class="o">=</span><span class="s">&#39;lines+markers&#39;</span><span class="p">,</span>
     <span class="n">stream</span><span class="o">=</span><span class="n">stream_1</span>         <span class="c"># (!) embed stream id, 1 per trace</span>
 <span class="p">)</span>
 
-<span class="n">data</span> <span class="o">=</span> <span class="n">Data</span><span class="p">([</span><span class="n">trace1</span><span class="p">])</span>
+<span class="n">data</span> <span class="o">=</span> <span class="n">go</span><span class="o">.</span><span class="n">Data</span><span class="p">([</span><span class="n">trace1</span><span class="p">])</span>
 </pre></div>
 
 </div>
@@ -786,7 +768,7 @@ class Stream
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
 <p>You're going to need to set up one of these stream link objects for each trace you wish to stream data to. 
-Below we'll set one up for the scatter trace we have in our plot.</p>
+<br>Below we'll set one up for the scatter trace we have in our plot.</p>
 
 </div>
 </div>
@@ -813,8 +795,8 @@ Below we'll set one up for the scatter trace we have in our plot.</p>
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p>We can now use the Stream Link object <code>s</code> in order to <code>stream</code> data to our plot.</p>
-<p>As an example, we will send a time stream and some random numbers(for 200 iterations):</p>
+<p>We can now use the Stream Link object <code>s</code> in order to <code>stream</code> data to our plot. 
+<br>As an example, we will send a time stream and some random numbers:</p>
 
 </div>
 </div>
@@ -830,12 +812,11 @@ Below we'll set one up for the scatter trace we have in our plot.</p>
  
 <span class="n">i</span> <span class="o">=</span> <span class="mi">0</span>    <span class="c"># a counter</span>
 <span class="n">k</span> <span class="o">=</span> <span class="mi">5</span>    <span class="c"># some shape parameter</span>
-<span class="n">N</span> <span class="o">=</span> <span class="mi">200</span>  <span class="c"># number of points to be plotted</span>
 
 <span class="c"># Delay start of stream by 5 sec (time to switch tabs)</span>
 <span class="n">time</span><span class="o">.</span><span class="n">sleep</span><span class="p">(</span><span class="mi">5</span><span class="p">)</span> 
 
-<span class="k">for</span> <span class="n">i</span> <span class="ow">in</span> <span class="nb">range</span><span class="p">(</span><span class="n">N</span><span class="p">):</span>
+<span class="k">while</span> <span class="bp">True</span><span class="p">:</span>
     
     <span class="c"># Current time on x-axis, random numbers on y-axis</span>
     <span class="n">x</span> <span class="o">=</span> <span class="n">datetime</span><span class="o">.</span><span class="n">datetime</span><span class="o">.</span><span class="n">now</span><span class="p">()</span><span class="o">.</span><span class="n">strftime</span><span class="p">(</span><span class="s">&#39;%Y-%m-</span><span class="si">%d</span><span class="s"> %H:%M:%S.</span><span class="si">%f</span><span class="s">&#39;</span><span class="p">)</span>
@@ -862,31 +843,19 @@ Below we'll set one up for the scatter trace we have in our plot.</p>
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p>A stream of data totalling 200 points is sent to Plotly's servers in real-time.</p>
-
-</div>
-</div>
-</div>
-<div class="cell border-box-sizing text_cell rendered">
-<div class="prompt input_prompt">
-</div>
-<div class="inner_cell">
-<div class="text_cell_render border-box-sizing rendered_html">
-<p>Below you can see an example of the same plot, but streaming indefinitely instead of just 200 points.</p>
+<p>Below you can see an example of the same plot, but streaming indefinitely instead of just 200 points. 
+<br>Note that the time points correspond to the internal clock on the servers, which is in UTC time.</p>
 
 </div>
 </div>
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[45]:</div>
+<div class="prompt input_prompt">In&nbsp;[16]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython2"><pre><span class="c"># Embed never-ending time series streaming plot</span>
 <span class="n">tls</span><span class="o">.</span><span class="n">embed</span><span class="p">(</span><span class="s">&#39;streaming-demos&#39;</span><span class="p">,</span><span class="s">&#39;12&#39;</span><span class="p">)</span>
-
-<span class="c"># Note that the time point correspond to internal clock of the servers, </span>
-<span class="c"># that is UTC time.</span>
 </pre></div>
 
 </div>
@@ -897,7 +866,7 @@ Below we'll set one up for the scatter trace we have in our plot.</p>
 <div class="output">
 
 
-<div class="output_area"><div class="prompt output_prompt">Out[45]:</div>
+<div class="output_area"><div class="prompt output_prompt">Out[16]:</div>
 
 <div class="output_html rendered_html output_subarea output_execute_result">
 <iframe id="igraph" scrolling="no" style="border:none;" seamless="seamless" src="https://plot.ly/~streaming-demos/12.embed" height="525" width="100%"></iframe>
@@ -916,8 +885,25 @@ Below we'll set one up for the scatter trace we have in our plot.</p>
 <div class="text_cell_render border-box-sizing rendered_html">
 <p>Anyone can view your streaming graph in real-time. All viewers will see the same data simultaneously (try it! Open up this notebook up in two different browser windows and observer
 that the graphs are plotting identical data!).</p>
-<p>Simply put, Plotly's streaming API is awesome!</p>
-<p>In brief: to make a Plotly streaming plot:</p>
+
+</div>
+</div>
+</div>
+<div class="cell border-box-sizing text_cell rendered">
+<div class="prompt input_prompt">
+</div>
+<div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
+<h4 id="Summmary">Summmary<a class="anchor-link" href="#Summmary">&#182;</a></h4>
+</div>
+</div>
+</div>
+<div class="cell border-box-sizing text_cell rendered">
+<div class="prompt input_prompt">
+</div>
+<div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
+<p>In summary, these are the steps required in order to start streaming to a trace object:</p>
 <ol>
 <li>Make a <code>stream id object</code> (<code>Stream</code> in the <code>plotly.graph_objs</code> module) containing the <code>streaming token</code>(which is found in the <strong>settings</strong> of your Plotly account) and the maximum number of points to be keep on screen (which is optional).</li>
 <li>Provide the <code>stream id object</code> as the key value for the <code>stream</code> attribute in your trace object. </li>
