--- a/_posts/user_guide_python/2015-06-30-multiple-trace-streaming.html
+++ b/_posts/user_guide_python/2015-06-30-multiple-trace-streaming.html
@@ -4,22 +4,14 @@ description: Getting Started with Plotly Streaming
 title: Streaming to Two Traces
 has_thumbnail: true
 thumbnail: 
-has_thumbnail: false
 layout: user-guide
-page_type: u-guide
+name: Streaming to Multiple Traces
 language: python
 title: Getting Started with Plotly Streaming
+has_thumbnail: false
+page_type: u-guide
 ---
 {% raw %}
-<div class="cell border-box-sizing text_cell rendered">
-<div class="prompt input_prompt">
-</div>
-<div class="inner_cell">
-<div class="text_cell_render border-box-sizing rendered_html">
-<h2 id="Streaming-to-Multiple-Traces">Streaming to Multiple Traces<a class="anchor-link" href="#Streaming-to-Multiple-Traces">&#182;</a></h2>
-</div>
-</div>
-</div>
 <div class="cell border-box-sizing text_cell rendered">
 <div class="prompt input_prompt">
 </div>
@@ -53,13 +45,10 @@ title: Getting Started with Plotly Streaming
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[82]:</div>
+<div class="prompt input_prompt">In&nbsp;[1]:</div>
 <div class="inner_cell">
     <div class="input_area">
-<div class=" highlight hl-ipython2"><pre><span class="c"># (*) Import plotly package</span>
-<span class="kn">import</span> <span class="nn">plotly</span>
- 
-<span class="c"># Check plolty version (if not latest, please upgrade)</span>
+<div class=" highlight hl-ipython2"><pre><span class="kn">import</span> <span class="nn">plotly</span>
 <span class="n">plotly</span><span class="o">.</span><span class="n">__version__</span>
 </pre></div>
 
@@ -71,11 +60,11 @@ title: Getting Started with Plotly Streaming
 <div class="output">
 
 
-<div class="output_area"><div class="prompt output_prompt">Out[82]:</div>
+<div class="output_area"><div class="prompt output_prompt">Out[1]:</div>
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&apos;1.9.9&apos;</pre>
+<pre>&apos;1.9.10&apos;</pre>
 </div>
 
 </div>
@@ -96,19 +85,13 @@ title: Getting Started with Plotly Streaming
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[83]:</div>
+<div class="prompt input_prompt">In&nbsp;[2]:</div>
 <div class="inner_cell">
     <div class="input_area">
-<div class=" highlight hl-ipython2"><pre><span class="c"># (*) To communicate with Plotly&#39;s server</span>
-<span class="kn">import</span> <span class="nn">plotly.plotly</span> <span class="kn">as</span> <span class="nn">py</span>  
- 
-<span class="c"># (*) Useful Python/Plotly tools</span>
+<div class=" highlight hl-ipython2"><pre><span class="kn">import</span> <span class="nn">plotly.plotly</span> <span class="kn">as</span> <span class="nn">py</span>  
 <span class="kn">import</span> <span class="nn">plotly.tools</span> <span class="kn">as</span> <span class="nn">tls</span>   
- 
-<span class="c"># (*) Graph objects to piece together plots</span>
 <span class="kn">import</span> <span class="nn">plotly.graph_objs</span> <span class="kn">as</span> <span class="nn">go</span>
-
-<span class="kn">import</span> <span class="nn">numpy</span> <span class="kn">as</span> <span class="nn">np</span>  <span class="c"># (*) numpy for math functions and arrays</span>
+<span class="kn">import</span> <span class="nn">numpy</span> <span class="kn">as</span> <span class="nn">np</span>  
 </pre></div>
 
 </div>
